# VideoProcess

./: .gitignore  CMakeLists.txt  VideoProcess.cpp  VideoProcess.h  main.cpp
